Add camera package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  camera: ^0.2.4
 
 
 # For information on the generic Dart part of this file, see the
